Fix overflow issue on code highlights

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -79,11 +79,15 @@
 /* GenericSubheading */ .chroma .gu { color: var(--nord-syntax4) }
 
 .chroma {
-    padding: 0.3em 1em;
+    padding: 0.4em 0.4em;
     border-radius: 17px;
 }
 
 code {
     font-family:  "Iosevka", "Inconsolata", monospace;
     font-size: 0.85em;
+}
+
+pre {
+    overflow-x: auto;
 }
